# IndependNet

./: Makefile  README.md  pyproject.toml  setup.py
src/independnet/: utils.py
src/independnet/calc/: corporate.py  params.py
tests/: test_utils.py
tests/calc/: test_corporate.py
