[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "IndependNet"
version = "0.0.1"
authors = [
  { name="Jules van Rie", email="jules@vanrie.be" },
]
description = "Calculate net payout from independent activities"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
tests = [
  'pytest',
  'pylint',
]
dev = [
  'ipython',
  'notebook',
  'ipdb'
]

[project.urls]
"Homepage" = "https://github.com/julesvanrie/IndependNet"
"Bug Tracker" = "https://github.com/julesvanrie/IndependNet/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__",
  "tests"
]
typeCheckingMode = "basic"
